welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:3: error: '(' expected but identifier found.
while x < 6) {
      ^Program:9: error: illegal start of simple expression
	}
        ^